# TestDB

./: CMakeLists.txt
include/: employee.h  generator.h  mass_applyer.h
src/: employee.cpp  generator.cpp  main.cpp  mass_applyer.cpp
